version 0.8.1:
 - "system" elements now attempt to intelligently convert between UNIX-style
   and Windows-style pathnames as appropriate.  For cross-platform compatibility,
   all AIML files should use UNIX-style paths inside their "system" elements.
 - Fixed crashes under Windows9X when a "system" element is executed when
   w9xpopen.exe is unavailable.
 - Re-piped most errors and warnings to go to stderr instead of stdout.
 - Fixed bug that would cause the the bot to stop responding to any input in a session
   if the "that" or "topic" strings were 100% whitespace (but still not empty).
 - Fixed bug that would cause multi-line "that" strings to become corrupted.  For
   example, "Hello there.\nNice to meet you" would become "HELLO THERENICE TO MEET
   YOU" when queried for that-matching.

version 0.8:
 - Removed support for non-standard "mode" attribute in "system" elements.
   It just wasn't worth breaking the AIML standard for.
 - Reworked persistent session support (I warned you!).  The old method involving
   Kernel.persistentSessions() has been removed.  Instead, there is a new
   Kernel.getSessionData() method which gives the bot author access to the session
   data.  You can store this data however you wish.  Session data can be restored
   later by repeated calls to Kernel.setPredicate().
 - Improved AIML parser error handling; instead of aborting the entire file, a
   parse error now only ignores the current category and forges ahead.  To check for
   parse errors, check the return value of AimlParser.getNumErrors() after parsing.

version 0.7:
 - Further improved AIML parsing; missing or invalid XML attributes are now
   detected at parse-time.  There's also a first stab at support for Forward
   Compatibility Mode: if the "version" attribute of an AIML tag is not 1.0.1,
   the parser is much more forgiving of unknown or missing XML tags and attributes.
 - Added "support" for the 'gossip' tag.  The specific behavior of this tag is